# clickhouse-app

./: .gitignore  CMakeLists.txt  app.cpp  test.cpp
core/: Executor.cpp  Executor.h  LocalBlock.cpp  LocalBlock.h  Noncopyable.h
jni/: BackendJni.cpp  BatchIterator.h  CHColumnVector.h  CHNativeBlock.h  ExpressionEvaluatorJniWrapper.h  JniCommon.cpp  JniCommon.h  Query.h
